package ar.edu.utn.frba.dds.domain;

public interface NotificadorAlerta {
    void notificar(Alerta alerta);
}
