package ar.edu.utn.frba.dds.domain;

public interface ProveedorClima {
    MedicionClimatica obtenerClimaActual(String ubicacion);
}
